[package]
name = "bonding-curve-system"
version = "0.1.0"
edition = "2021"
description = "Production-ready bonding curve system for Alkanes with BUSD/frBTC integration and AMM graduation"
authors = ["Alkanes Bonding Curve Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs" }
anyhow = "1.0.94"
bitcoin = { version = "0.32.4", features = ["rand"] }
hex_lit = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
once_cell = "1.19.0"
wasm-bindgen-test = "0.3.40"
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs", features = ["test-utils"] }
alkanes = { git = "https://github.com/kungfuflex/alkanes-rs", features = [
    "test-utils",
] }
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", features = [
    "test-utils",
] }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs", features = [
    "test-utils",
] }
hex_lit = "0.1.1"

[build-dependencies]
anyhow = "1.0.90"
flate2 = "1.0.34"
hex = "0.4.3"

[features]
default = []
test = []

[profile.release]
opt-level = "s"          # Optimize for size
lto = true               # Link time optimization  
codegen-units = 1        # Single codegen unit for better optimization
panic = "abort"          # Reduce panic handling code
strip = true             # Remove debug symbols
